# Federated_Learning

bert_finetuning/: Pipfile  Reaadme.md  pyproject.toml
bert_finetuning/src/: client.py  server.py  task.py
universal_classification_model/client_1/: client.py  utils.py
