[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BERT_Finetuning"

[tool.flwr.app]
publisher = "ashish"

[tool.flwr.app.components]
serverapp = "huggingface_example.server_app:app"
clientapp = "huggingface_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
model-name = "prajjwal1/bert-tiny"
fraction-fit = 0.05
fraction-evaluate = 0.1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 100

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 100
options.backend.client-resources.num-cpus = 4 # each ClientApp assumes to use 4CPUs
options.backend.client-resources.num-gpus = 0.25 # at most 4 ClientApp will run in a given GPU (lower it to increase parallelism)